add a product addition function

--- a/projects/administration-portal/src/app/components/confections/confection-table/confection-list-toolbar/confection-list-toolbar.component.html
+++ b/projects/administration-portal/src/app/components/confections/confection-table/confection-list-toolbar/confection-list-toolbar.component.html
@@ -17,7 +17,7 @@
         class="search__input" 
         [(ngModel)]="searchTerm"
         (input)="search()"
-        placeholder="Поиск по Имени или Описанию продукта"
+        placeholder="Поиск по Имени Продукта"
       />
     </div>
   </div>
