--- a/projects/administration-portal/src/app/components/confections/confection-list/confection-list.component.html
+++ b/projects/administration-portal/src/app/components/confections/confection-list/confection-list.component.html
@@ -16,5 +16,9 @@
       [totalCount]="totalCount"
       (pageChanged)="onPageChange($event)"
     ></app-pagination>
+
+    <app-popup *ngIf="isDisplayCreatationModal" title="Добавить продукт">
+      <app-create-confection></app-create-confection>
+    </app-popup>
   </div>
 </div>
