--- a/projects/administration-portal/src/app/components/orders/order-table/order-table-toolbar/order-table-toolbar.component.scss
+++ b/projects/administration-portal/src/app/components/orders/order-table/order-table-toolbar/order-table-toolbar.component.scss
@@ -1,99 +1,99 @@
-@import 'projects/administration-portal/src/app/scss/abstracts/variables';
+@import "projects/administration-portal/src/app/scss/abstracts/variables";
 
 .toolbar {
-    background-color: #fbfbfb;
-    border-radius: 7px;
+  background-color: #fbfbfb;
+  border-radius: 7px;
 
-    &__row {
-        display: flex;
-        align-items: center;
-        padding: 11.5px 25px;
+  &__row {
+    display: flex;
+    align-items: center;
+    padding: 11.5px 25px;
 
-        @media (max-width: $md2) {
-            padding: 11.5px 15px;
-        }
+    @media (max-width: $md2) {
+      padding: 11.5px 15px;
     }
+  }
 
-    &__search { 
-        margin: 0px 25px 0px 0px;
-        flex: 1 1 auto;
+  &__search {
+    margin: 0px 25px 0px 0px;
+    flex: 1 1 auto;
 
-        @media (max-width: $md2) {
-            margin: 0px 10px 0px 0px;
-        }
+    @media (max-width: $md2) {
+      margin: 0px 10px 0px 0px;
     }
+  }
 
-    &__controls {
-        flex: 0 1 34%;
+  &__controls {
+    flex: 0 1 34%;
 
-        @media (max-width: $md2) {
-            flex: 0 1 auto;
-        }
+    @media (max-width: $md2) {
+      flex: 0 1 auto;
     }
+  }
 
-    &__dropdown { 
-        @media (min-width: $md2) {
-            display: none;
-        }
+  &__dropdown {
+    @media (min-width: $md2) {
+      display: none;
     }
+  }
 
-    &__actions { 
-        display: flex;
-        justify-content: space-between;
+  &__actions {
+    display: flex;
+    justify-content: space-between;
 
-        @media (max-width: $md2) {
-            display: none;
-        }
-    } 
-
-    &__dropdown {
-        @media (min-width: $md2) {
-            display: none;
-        }
+    @media (max-width: $md2) {
+      display: none;
     }
+  }
+
+  &__dropdown {
+    @media (min-width: $md2) {
+      display: none;
+    }
+  }
 }
 
 .dropdown {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 
-    &:hover .dropdown__menu {
-        display: block;
-        visibility: visible;
-        transform: translateY(0);
-    }
+  &:hover .dropdown__menu {
+    display: block;
+    visibility: visible;
+    transform: translateY(0);
+  }
 
-	&__menu { 
-        background: white;
-        border-radius: .7em;
-        border: 1px solid $gray-stroke;
-        position: absolute;
-        font-size: 0.9rem;
-        right: 0;
-        top: 40px;
-        padding: .4em;
-        box-sizing: border-box;
-        min-width: 160px;
-        z-index: 5;
-        transform: translateY(-1em);
-        transition: transform .5s;
-        visibility: hidden;
+  &__menu {
+    background: white;
+    border-radius: 0.7em;
+    border: 1px solid $gray-stroke;
+    position: absolute;
+    font-size: 0.9rem;
+    right: 0;
+    top: 40px;
+    padding: 0.4em;
+    box-sizing: border-box;
+    min-width: 160px;
+    z-index: 5;
+    transform: translateY(-1em);
+    transition: transform 0.5s;
+    visibility: hidden;
 
-        ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
 
-            li a {
-                display: flex;
-                text-decoration: none;
-                padding: .55em;
-                color: $dark-gray;
+      li a {
+        display: flex;
+        text-decoration: none;
+        padding: 0.55em;
+        color: $dark-gray;
 
-                span {
-                    margin-left: .5em;
-                }
-            }
+        span {
+          margin-left: 0.5em;
         }
+      }
     }
+  }
 }
