add output for creating new confection

--- a/projects/administration-portal/src/app/components/confections/confection-table/confection-list-toolbar/confection-list-toolbar.component.html
+++ b/projects/administration-portal/src/app/components/confections/confection-table/confection-list-toolbar/confection-list-toolbar.component.html
@@ -1,7 +1,10 @@
 <section class="toolbar">
   <div class="toolbar__row">
     <div class="toolbar__controls">
-      <button class="toolbar__btn btn-icon">
+      <button 
+        class="toolbar__btn btn-icon"
+        (click)="create()"
+      >
         <img src="/assets/icons/add.png">
         НОВЫЙ ПРОДУКТ
       </button>
