--- a/projects/administration-portal/src/app/components/confections/confection-list/confection-list.component.html
+++ b/projects/administration-portal/src/app/components/confections/confection-list/confection-list.component.html
@@ -7,6 +7,7 @@
       [confections]="paginatedConfections.items"
       [isLoading]="isLoading"
       (searchChanged)="onSearchChanged($event)"
+      (createNewClicked)="displayCreationModal()"
     ></app-confection-table>
 
     <app-pagination 
